--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,58 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Assets/Jacky's Simple Audio Manager/Examples/Dynamic Music.meta
+Assets/Jacky's Simple Audio Manager/Examples/Dynamic Music/Audio Files.meta
+Assets/Jacky's Simple Audio Manager/Examples/Dynamic Music/Audio Files/Music.meta
+Assets/Jacky's Simple Audio Manager/Examples/Dynamic Music/Audio.meta
+Assets/Jacky's Simple Audio Manager/Examples/Dynamic Music/Particle.meta
+Assets/Jacky's Simple Audio Manager/Examples/First-Person 3D/Animations.meta
+Assets/Jacky's Simple Audio Manager/Examples/First-Person 3D/Audio Files.meta
+Assets/Jacky's Simple Audio Manager/Examples/First-Person 3D/Audio Files/Sounds.meta
+Assets/Jacky's Simple Audio Manager/Examples/First-Person 3D/Audio Files/Sounds/AK Sounds.meta
+Assets/Jacky's Simple Audio Manager/Examples/First-Person 3D/Audio.meta
+Assets/Jacky's Simple Audio Manager/Examples/First-Person 3D/Audio/Gun.meta
+Assets/Jacky's Simple Audio Manager/Examples/First-Person 3D/Prefabs.meta
+Assets/Jacky's Simple Audio Manager/Examples/First-Person 3D/Scripts.meta
+Assets/Jacky's Simple Audio Manager/Examples/Loop Points.meta
+Assets/Jacky's Simple Audio Manager/Examples/Loop Points/Audio Files.meta
+Assets/Jacky's Simple Audio Manager/Examples/Loop Points/Audio.meta
+Assets/Jacky's Simple Audio Manager/Examples/Shmup 2D.meta
+Assets/Jacky's Simple Audio Manager/Examples/Shmup 2D/Animations.meta
+Assets/Jacky's Simple Audio Manager/Examples/Shmup 2D/Audio Files.meta
+Assets/Jacky's Simple Audio Manager/Examples/Shmup 2D/Audio Files/Music.meta
+Assets/Jacky's Simple Audio Manager/Examples/Shmup 2D/Audio Files/Sounds.meta
+Assets/Jacky's Simple Audio Manager/Examples/Shmup 2D/Audio.meta
+Assets/Jacky's Simple Audio Manager/Examples/Shmup 2D/Audio/Music.meta
+Assets/Jacky's Simple Audio Manager/Examples/Shmup 2D/Audio/SFX.meta
+Assets/Jacky's Simple Audio Manager/Examples/Shmup 2D/Graphics.meta
+Assets/Jacky's Simple Audio Manager/Examples/Shmup 2D/Prefabs.meta
+Assets/Jacky's Simple Audio Manager/Examples/Shmup 2D/Scripts.meta
+Assets/Jacky's Simple Audio Manager/Plugins.meta
+Assets/Jacky's Simple Audio Manager/Prefabs.meta
+Assets/Jacky's Simple Audio Manager/Presets.meta
+Assets/Jacky's Simple Audio Manager/Scripts.meta
+Assets/Art/Sprites/FX/Particle.meta
+Assets/Effects & Shaders/RippleEffect.meta
+Assets/Jacky's Simple Audio Manager/Editor.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Editor.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Plugins.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Prefabs.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Presets.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Scripts.meta
+Assets/Plugins/Jackys.Simple.Audio.Manager.2.1.5.unitypackage.meta
+Assets/Scripts/RippleEffect.meta
+Assets/Art/Sprites/FX/Particle.meta
+Assets/Effects & Shaders/RippleEffect.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Editor.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Plugins.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Prefabs.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Presets.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Scripts.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Scripts.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Presets.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Prefabs.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Plugins.meta
+Assets/Plugins/Jacky's Simple Audio Manager/Editor.meta
+Assets/Effects & Shaders/RippleEffect.meta
+Assets/Art/Sprites/FX/Particle.meta
